--- a/auproximity-webui/public/index.html
+++ b/auproximity-webui/public/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Among Us Proximity Chat" />
-    <meta property="og:url" content="https://auproxy.herokuapp.com" />
+    <meta property="og:url" content="https://aupro.xyz" />
     <meta property="og:image" content="<%= BASE_URL %>android-chrome-512x512.png" />
     <meta property="og:description" content="The most comprehensive proximity mod for Among Us" />
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
