--- a/auproximity-webui/public/index.html
+++ b/auproximity-webui/public/index.html
@@ -20,6 +20,7 @@
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
     <title>AUProximity</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <script>navigator.serviceWorker.register('/serviceworker.js')</script>
   </head>
   <body>
     <noscript>
